# CSlash

./: CSlash.cabal  LICENSE  flake.nix  llvm-passes  llvm-targets
app/: Main.hs
docs/: TypeSystem.aux  TypeSystem.bbl  TypeSystem.bcf  TypeSystem.blg  TypeSystem.run.xml  TypeSystem.tex  sources.bib  tt.sty
docs/ComptimeDependent/: TypeSystem.aux  TypeSystem.run.xml  TypeSystem.tex  tt.sty
docs/ComptimeDependent/auto/: TypeSystem.el  tt.el
docs/auto/: TypeSystem.el  sources.el  tt.el
src/: CSlash.hs
src/CSlash/: BaseDir.hs  ByteOrder.hs  Conc.hs  Core.hs  Core.hs-boot  CoreToStg.hs  Cs.hs  CsToCore.hs  Data.FastString.hs  Exts.hs  HandleEncoding.hs  IfaceToCore.hs  IfaceToCore.hs-boot  Llvm.hs  Parser.y  Pir.hs  PirToLlvm.hs  Platform.hs  Settings.hs  Show.hs  Stack.hs  StgToPir.hs  SysTools.hs  Types.hs  Unicode.hs  UniqueSubdir.hs  Unit.hs  Version.hs
src/CSlash/Builtin/: Names.hs  PrimOps.hs  PrimOps.hs-boot  Types.hs  Types.hs-boot  Uniques.hs  Uniques.hs-boot  Utils.hs
src/CSlash/Builtin/PrimOps/: Casts.hs
src/CSlash/Builtin/Types/: Prim.hs
src/CSlash/Core/: ConLike.hs  DataCon.hs  DataCon.hs-boot  FVs.hs  Kind.hs  Kind.hs-boot  Lint.hs  Make.hs  Ppr.hs  Ppr.hs-boot  Predicate.hs  Predicate.hs-boot  Reduction.hs  Rules.hs  Seq.hs  SimpleOpt.hs  SimpleOpt.hs-boot  Stats.hs  Subst.hs  Subst.hs-boot  Tidy.hs  TyCon.hs  TyCon.hs-boot  Type.hs  Type.hs-boot  Unfold.hs  Unfold.hs-boot  Unify.hs  UsageEnv.hs  Utils.hs
src/CSlash/Core/Kind/: Compare.hs  Compare.hs-boot  FVs.hs  Subst.hs
src/CSlash/Core/Map/: Expr.hs  Kind.hs  Type.hs
src/CSlash/Core/Opt/: Arity.hs  CSE.hs  CallArity.hs  CallerCC.hs  Coercion.hs  ConstantFold.hs  DmdAnal.hs  Exitify.hs  FloatIn.hs  FloatOut.hs  LiberateCase.hs  Monad.hs  OccurAnal.hs  Pipeline.hs  SetLevels.hs  Simplify.hs  Specialize.hs  Stats.hs
src/CSlash/Core/Rules/: Config.hs
src/CSlash/Core/TyCon/: Set.hs
src/CSlash/Core/Type/: Compare.hs  FVs.hs  FVs.hs-boot  Ppr.hs  Ppr.hs-boot  Rep.hs  Rep.hs-boot  Subst.hs  Tidy.hs
src/CSlash/Core/Unfold/: Make.hs
src/CSlash/CoreToLlvm/: Prep.hs
src/CSlash/CoreToStg/: Prep.hs
src/CSlash/Cs/: Binds.hs  Decls.hs  Doc.hs  Dump.hs  Expr.hs  Expr.hs-boot  Extension.hs  ImpExp.hs  Instances.hs  Kind.hs  Lit.hs  Pass.hs  Pat.hs  Stats.hs  Type.hs  Utils.hs
src/CSlash/CsToCore/: Binds.hs  Binds.hs-boot  Expr.hs  Expr.hs-boot  GuardedRHSs.hs  Match.hs  Match.hs-boot  Monad.hs  Pmc.hs  Types.hs  Usage.hs  Utils.hs
src/CSlash/CsToCore/Errors/: Ppr.hs  Types.hs
src/CSlash/CsToCore/Match/: Literal.hs
src/CSlash/CsToCore/Pmc/: Check.hs  Desugar.hs  Solver.hs  Types.hs  Utils.hs
src/CSlash/Data/: Bag.hs  Bool.hs  EnumSet.hs  FastMutInt.hs  FastString.hs  FiniteMap.hs  IOEnv.hs  Maybe.hs  OrdList.hs  Pair.hs  SmallArray.hs  Stream.hs  Strict.hs  StringBuffer.hs  TrieMap.hs  Word64Set.hs
src/CSlash/Data/FastString/: Env.hs
src/CSlash/Data/Graph/: Directed.hs  UnVar.hs
src/CSlash/Data/List/: Infinite.hs  SetOps.hs  SetOpts.hs
src/CSlash/Data/Word64Map/: Strict.hs
src/CSlash/Driver/: Backend.hs  CmdLine.hs  CodeOutput.hs  Config.hs  DynFlags.hs  Env.hs  Errors.hs  Flags.hs  LlvmConfigCache.hs  Main.hs  Make.hs  MakeSem.hs  Monad.hs  Phases.hs  Pipeline.hs  Ppr.hs  Session.hs
src/CSlash/Driver/Backend/: Internal.hs
src/CSlash/Driver/Config/: CoreToStg.hs  Diagnostic.hs  Finder.hs  Logger.hs  Parser.hs  Pir.hs  PirToLlvm.hs  StgToPir.hs  Tidy.hs
src/CSlash/Driver/Env/: KnotVars.hs  Types.hs
src/CSlash/Driver/Errors/: Ppr.hs  Types.hs
src/CSlash/Driver/Pipeline/: Execute.hs  LogQueue.hs  Monad.hs  Phases.hs
src/CSlash/Iface/: Binary.hs  Env.hs  Errors.hs  Load.hs  Make.hs  Recomp.hs  Rename.hs  Syntax.hs  Tidy.hs  Type.hs
src/CSlash/Iface/Errors/: Ppr.hs  Types.hs
src/CSlash/Iface/Recomp/: Binary.hs  Flags.hs
src/CSlash/Language/: Syntax.hs
src/CSlash/Language/Module/: Name.hs
src/CSlash/Language/Syntax/: Basic.hs  Binds.hs  Decls.hs  Expr.hs  Expr.hs-boot  Extension.hs  ImpExp.hs  Kind.hs  Lit.hs  Pat.hs  Type.hs
src/CSlash/Linker/: Dynamic.hs  ExtraObj.hs  Static.hs  Types.hs  Unit.hs
src/CSlash/Linker/Static/: Utils.hs
src/CSlash/Llvm/: Config.hs  MetaData.hs  Ppr.hs  Syntax.hs  Types.hs
src/CSlash/Parser/: Annotation.hs  CharClass.hs  Header.hs  Lexer.x  PostProcess.hs  Types.hs
src/CSlash/Parser/Errors/: Basic.hs  Ppr.hs  Types.hs
src/CSlash/Pir/: BlockId.hs  Config.hs  Expr.hs  Graph.hs  Node.hs  PLabel.hs  Pipeline.hs  Reg.hs  Type.hs  UniqueRenamer.hs
src/CSlash/Pir/Dataflow/: Block.hs  Graph.hs  Label.hs
src/CSlash/PirToLlvm/: Base.hs  Config.hs  Version.hs
src/CSlash/PirToLlvm/Version/: Bounds.hs  Type.hs
src/CSlash/Platform/: ArchOS.hs  Constants.hs  Profile.hs  Ways.hs
src/CSlash/Rename/: Bind.hs  Bind.hs-boot  CsKind.hs  CsType.hs  Env.hs  Expr.hs  Expr.hs-boot  Fixity.hs  Module.hs  Names.hs  Pat.hs  Unbound.hs  Utils.hs
src/CSlash/Settings/: Config.hs  Constants.hs  IO.hs  Utils.hs
src/CSlash/Stg/: FVs.hs  Lift.hs  Make.hs  Pipeline.hs  Subst.hs  Syntax.hs  Unarise.hs  Utils.hs
src/CSlash/StgToPir/: Bind.hs  CgUtils.hs  Closure.hs  Config.hs  Env.hs  Expr.hs  Function.hs  Monad.hs  Sequel.hs  Types.hs
src/CSlash/SysTools/: BaseDir.hs  Process.hs  Tasks.hs  Terminal.hs
src/CSlash/Tc/: CsType.hs  Errors.hs  Module.hs  Solver.hs  Types.hs  Validity.hs
src/CSlash/Types/: Avail.hs  Basic.hs  CompleteMatch.hs  Demand.hs  Error.hs  Fixity.hs  GREInfo.hs  Hint.hs  Id.hs  Id.hs-boot  Literal.hs  Name.hs  Name.hs-boot  PcInfo.hs  PkgQual.hs  ProfAuto.hs  RepType.hs  SourceError.hs  SourceFile.hs  SourceText.hs  SrcLoc.hs  Target.hs  Tickish.hs  TyThing.hs  TyThing.hs-boot  TypeEnv.hs  Unique.hs  Var.hs  Var.hs-boot  Var2.hs
src/CSlash/Unit/: Database.hs  Env.hs  External.hs  Finder.hs  Home.hs  Info.hs  Module.hs  Parser.hs  Ppr.hs  State.hs  Types.hs  Types.hs-boot
src/CSlash/Utils/: Binary.hs  BufHandle.hs  CliOption.hs  Constants.hs  Encoding.hs  Error.hs  Exception.hs  FV.hs  Fingerprint.hs  GlobalVars.hs  Lexeme.hs  Logger.hs  Misc.hs  Monad.hs  Outputable.hs  Panic.hs  Ppr.hs  TmpFs.hs  Trace.hs  Word64.hs
(+114 files in other folders)
