cabal-version:      2.4
name:               CSlash
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

executable slash
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base >= 4.20
                    , CSlash

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2

library
    exposed-modules:  CSlash

                    , CSlash.Builtin.Names
                    , CSlash.Builtin.Types
                    , CSlash.Builtin.Types.Prim
                    , CSlash.Builtin.Uniques

                    , CSlash.ByteOrder

                    , CSlash.Conc

                    , CSlash.Core
                    , CSlash.Core.ConLike
                    , CSlash.Core.DataCon
                    , CSlash.Core.Kind
                    , CSlash.Core.Kind.FVs
                    , CSlash.Core.Kind.Subst
                    , CSlash.Core.Opt.CallerCC.Types
                    , CSlash.Core.Ppr
                    , CSlash.Core.TyCon
                    , CSlash.Core.Type
                    , CSlash.Core.Type.FVs
                    , CSlash.Core.Type.Ppr
                    , CSlash.Core.Type.Rep
                    , CSlash.Core.Type.Subst
                    , CSlash.Core.Unfold

                    , CSlash.Cs
                    , CSlash.Cs.Binds
                    , CSlash.Cs.Decls
                    , CSlash.Cs.Doc
                    , CSlash.Cs.Dump
                    , CSlash.Cs.Expr
                    , CSlash.Cs.Extension
                    , CSlash.Cs.ImpExp
                    , CSlash.Cs.Instances
                    , CSlash.Cs.Kind
                    , CSlash.Cs.Lit
                    , CSlash.Cs.Pat
                    , CSlash.Cs.Stats
                    , CSlash.Cs.Type
                    , CSlash.Cs.Utils

                    , CSlash.Data.Bag
                    , CSlash.Data.Bool
                    , CSlash.Data.EnumSet
                    , CSlash.Data.FastMutInt
                    , CSlash.Data.FastString
                    , CSlash.Data.FastString.Env
                    , CSlash.Data.FiniteMap
                    , CSlash.Data.Graph.Directed
                    , CSlash.Data.List.Infinite
                    , CSlash.Data.Maybe
                    , CSlash.Data.OrdList
                    , CSlash.Data.Strict
                    , CSlash.Data.StringBuffer

                    , CSlash.Driver.Backend
                    , CSlash.Driver.Backend.Internal
                    , CSlash.Driver.Config.Diagnostic
                    , CSlash.Driver.Config.Parser
                    , CSlash.Driver.DynFlags
                    , CSlash.Driver.Env
                    , CSlash.Driver.Env.KnotVars
                    , CSlash.Driver.Env.Types
                    , CSlash.Driver.Errors
                    , CSlash.Driver.Errors.Ppr
                    , CSlash.Driver.Errors.Types
                    , CSlash.Driver.Flags
                    , CSlash.Driver.LlvmConfigCache
                    , CSlash.Driver.Main
                    , CSlash.Driver.Phases
                    , CSlash.Driver.Session

                    , CSlash.Iface.Syntax
                    , CSlash.Iface.Type

                    , CSlash.Language.Syntax
                    , CSlash.Language.Syntax.Basic
                    , CSlash.Language.Syntax.Binds
                    , CSlash.Language.Syntax.Decls
                    , CSlash.Language.Syntax.Expr
                    , CSlash.Language.Syntax.Extension
                    , CSlash.Language.Syntax.ImpExp
                    , CSlash.Language.Syntax.Kind
                    , CSlash.Language.Syntax.Lit
                    , CSlash.Language.Syntax.Module.Name
                    , CSlash.Language.Syntax.Pat
                    , CSlash.Language.Syntax.Type

                    , CSlash.Linker.Types

                    , CSlash.Llvm.Config

                    , CSlash.Parser
                    , CSlash.Parser.Annotation
                    , CSlash.Parser.CharClass
                    , CSlash.Parser.Errors.Basic
                    , CSlash.Parser.Errors.Ppr
                    , CSlash.Parser.Errors.Types
                    , CSlash.Parser.Lexer
                    , CSlash.Parser.PostProcess
                    , CSlash.Parser.Types

                    , CSlash.Platform
                    , CSlash.Platform.ArchOS
                    , CSlash.Platform.Constants
                    , CSlash.Platform.Ways

                    , CSlash.Settings
                    , CSlash.Settings.Constants
                    , CSlash.Settings.Utils

                    , CSlash.Show

                    , CSlash.Stack

                    , CSlash.Tc.Types.Origin
                    , CSlash.Tc.Utils.TcType

                    , CSlash.Types
                    , CSlash.Types.Avail
                    , CSlash.Types.Basic
                    , CSlash.Types.CompleteMatch
                    , CSlash.Types.Error
                    , CSlash.Types.Fixity
                    , CSlash.Types.Fixity.Env
                    , CSlash.Types.GREInfo
                    , CSlash.Types.Hint
                    , CSlash.Types.Hint.Ppr
                    , CSlash.Types.Id
                    , CSlash.Types.Id.Make
                    , CSlash.Types.Id.Info
                    , CSlash.Types.Literal
                    , CSlash.Types.Name
                    , CSlash.Types.Name.Env
                    , CSlash.Types.Name.Occurrence
                    , CSlash.Types.Name.Reader
                    , CSlash.Types.Name.Set
                    , CSlash.Types.PkgQual
                    , CSlash.Types.ProfAuto
                    , CSlash.Types.RepType
                    , CSlash.Types.SourceFile
                    , CSlash.Types.SourceText
                    , CSlash.Types.SrcLoc
                    , CSlash.Types.Tickish
                    , CSlash.Types.TyThing
                    , CSlash.Types.Unique
                    , CSlash.Types.Unique.DFM
                    , CSlash.Types.Unique.DSet
                    , CSlash.Types.Unique.FM
                    , CSlash.Types.Unique.Map
                    , CSlash.Types.Unique.Set
                    , CSlash.Types.Var
                    , CSlash.Types.Var.Env
                    , CSlash.Types.Var.Set
                    
                    , CSlash.Unicode

                    , CSlash.Unit
                    , CSlash.Unit.Home
                    , CSlash.Unit.Module
                    , CSlash.Unit.Module.Env
                    , CSlash.Unit.Module.Imported
                    , CSlash.Unit.Module.Location
                    , CSlash.Unit.Module.ModSummary
                    , CSlash.Unit.Module.Warnings
                    , CSlash.Unit.Types

                    , CSlash.Utils.Binary
                    , CSlash.Utils.BufHandle
                    , CSlash.Utils.CliOption
                    , CSlash.Utils.Constants
                    , CSlash.Utils.Encoding
                    , CSlash.Utils.Error
                    , CSlash.Utils.Exception
                    , CSlash.Utils.Fingerprint
                    , CSlash.Utils.GlobalVars
                    , CSlash.Utils.Lexeme
                    , CSlash.Utils.Logger
                    , CSlash.Utils.Misc
                    , CSlash.Utils.Outputable
                    , CSlash.Utils.Panic
                    , CSlash.Utils.Panic.Plain
                    , CSlash.Utils.Ppr
                    , CSlash.Utils.Ppr.Color
                    , CSlash.Utils.TmpFs
                    , CSlash.Utils.Word64

                    , CSlash.Version

    build-depends:    base >= 4.20
                    , ghc ^>= 9.10.1
                    , ghc-boot ^>= 9.10.1
                    , array
                    , filepath
                    , directory
                    , containers
                    , time
                    , deepseq
                    , bytestring
                    , exceptions

    build-tool-depends:   alex:alex 
                        , happy:happy

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wno-name-shadowing
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -- -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2
