cabal-version:      2.4
name:               CSlash
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

executable csl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base >= 4.20
                    , CSlash
                    , filepath
                    , containers
                    , transformers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2

library
    exposed-modules:  CSlash

                    , CSlash.BaseDir

                    , CSlash.Builtin.Names
                    , CSlash.Builtin.Types
                    , CSlash.Builtin.Types.Prim
                    , CSlash.Builtin.Uniques
                    , CSlash.Builtin.Utils

                    , CSlash.ByteOrder

                    , CSlash.Conc

                    , CSlash.Core
                    , CSlash.Core.ConLike
                    , CSlash.Core.DataCon
                    , CSlash.Core.Kind
                    , CSlash.Core.Kind.FVs
                    , CSlash.Core.Kind.Subst
                    , CSlash.Core.Opt.CallerCC
                    , CSlash.Core.Opt.CallerCC.Types
                    , CSlash.Core.Ppr
                    , CSlash.Core.TyCon
                    , CSlash.Core.Type
                    , CSlash.Core.Type.FVs
                    , CSlash.Core.Type.Ppr
                    , CSlash.Core.Type.Rep
                    , CSlash.Core.Type.Subst
                    , CSlash.Core.Unfold

                    , CSlash.Cs
                    , CSlash.Cs.Binds
                    , CSlash.Cs.Decls
                    , CSlash.Cs.Doc
                    , CSlash.Cs.Dump
                    , CSlash.Cs.Expr
                    , CSlash.Cs.Extension
                    , CSlash.Cs.ImpExp
                    , CSlash.Cs.Instances
                    , CSlash.Cs.Kind
                    , CSlash.Cs.Lit
                    , CSlash.Cs.Pat
                    , CSlash.Cs.Stats
                    , CSlash.Cs.Type
                    , CSlash.Cs.Utils

                    , CSlash.Data.Bag
                    , CSlash.Data.Bool
                    , CSlash.Data.EnumSet
                    , CSlash.Data.FastMutInt
                    , CSlash.Data.FastString
                    , CSlash.Data.FastString.Env
                    , CSlash.Data.FiniteMap
                    , CSlash.Data.Graph.Directed
                    , CSlash.Data.IOEnv
                    , CSlash.Data.List.Infinite
                    , CSlash.Data.List.SetOps
                    , CSlash.Data.Maybe
                    , CSlash.Data.OrdList
                    , CSlash.Data.Strict
                    , CSlash.Data.StringBuffer
                    , CSlash.Data.Word64Set

                    , CSlash.Driver.Backend
                    , CSlash.Driver.Backend.Internal
                    , CSlash.Driver.CmdLine
                    , CSlash.Driver.Config.Diagnostic
                    , CSlash.Driver.Config.Finder
                    , CSlash.Driver.Config.Logger
                    , CSlash.Driver.Config.Parser
                    , CSlash.Driver.DynFlags
                    , CSlash.Driver.Env
                    , CSlash.Driver.Env.KnotVars
                    , CSlash.Driver.Env.Types
                    , CSlash.Driver.Errors
                    , CSlash.Driver.Errors.Ppr
                    , CSlash.Driver.Errors.Types
                    , CSlash.Driver.Flags
                    , CSlash.Driver.LlvmConfigCache
                    , CSlash.Driver.Main
                    , CSlash.Driver.Make
                    , CSlash.Driver.Monad
                    , CSlash.Driver.Phases
                    , CSlash.Driver.Pipeline.Monad
                    , CSlash.Driver.Pipeline.Phases
                    , CSlash.Driver.Session

                    , CSlash.HandleEncoding
                    
                    , CSlash.Iface.Binary
                    , CSlash.Iface.Load
                    , CSlash.Iface.Recomp
                    , CSlash.Iface.Recomp.Binary
                    , CSlash.Iface.Syntax
                    , CSlash.Iface.Type

                    , CSlash.Language.Syntax
                    , CSlash.Language.Syntax.Basic
                    , CSlash.Language.Syntax.Binds
                    , CSlash.Language.Syntax.Decls
                    , CSlash.Language.Syntax.Expr
                    , CSlash.Language.Syntax.Extension
                    , CSlash.Language.Syntax.ImpExp
                    , CSlash.Language.Syntax.Kind
                    , CSlash.Language.Syntax.Lit
                    , CSlash.Language.Syntax.Module.Name
                    , CSlash.Language.Syntax.Pat
                    , CSlash.Language.Syntax.Type

                    , CSlash.Linker.Types

                    , CSlash.Llvm.Config

                    , CSlash.Parser
                    , CSlash.Parser.Annotation
                    , CSlash.Parser.CharClass
                    , CSlash.Parser.Errors.Basic
                    , CSlash.Parser.Errors.Ppr
                    , CSlash.Parser.Errors.Types
                    , CSlash.Parser.Header
                    , CSlash.Parser.Lexer
                    , CSlash.Parser.PostProcess
                    , CSlash.Parser.Types

                    , CSlash.Platform
                    , CSlash.Platform.ArchOS
                    , CSlash.Platform.Constants
                    , CSlash.Platform.Profile
                    , CSlash.Platform.Ways

                    , CSlash.Rename.Names

                    , CSlash.Settings
                    , CSlash.Settings.Config
                    , CSlash.Settings.Constants
                    , CSlash.Settings.IO
                    , CSlash.Settings.Utils

                    , CSlash.Show

                    , CSlash.Stack

                    , CSlash.SysTools
                    , CSlash.SysTools.BaseDir
                    , CSlash.SysTools.Process
                    , CSlash.SysTools.Tasks
                    , CSlash.SysTools.Terminal

                    , CSlash.Tc.Module
                    , CSlash.Tc.Types
                    , CSlash.Tc.Types.Origin
                    , CSlash.Tc.Types.TcRef
                    , CSlash.Tc.Utils.Monad
                    , CSlash.Tc.Utils.TcType

                    , CSlash.Types
                    , CSlash.Types.Avail
                    , CSlash.Types.Basic
                    , CSlash.Types.CompleteMatch
                    , CSlash.Types.Demand
                    , CSlash.Types.Error
                    , CSlash.Types.Error.Codes
                    , CSlash.Types.Fixity
                    , CSlash.Types.Fixity.Env
                    , CSlash.Types.GREInfo
                    , CSlash.Types.Hint
                    , CSlash.Types.Hint.Ppr
                    , CSlash.Types.Id
                    , CSlash.Types.Id.Make
                    , CSlash.Types.Id.Info
                    , CSlash.Types.Literal
                    , CSlash.Types.Name
                    , CSlash.Types.Name.Cache
                    , CSlash.Types.Name.Env
                    , CSlash.Types.Name.Occurrence
                    , CSlash.Types.Name.Reader
                    , CSlash.Types.Name.Set
                    , CSlash.Types.PcInfo
                    , CSlash.Types.PkgQual
                    , CSlash.Types.ProfAuto
                    , CSlash.Types.RepType
                    , CSlash.Types.SourceError
                    , CSlash.Types.SourceFile
                    , CSlash.Types.SourceText
                    , CSlash.Types.SrcLoc
                    , CSlash.Types.Target
                    , CSlash.Types.Tickish
                    , CSlash.Types.TypeEnv
                    , CSlash.Types.TyThing
                    , CSlash.Types.Unique
                    , CSlash.Types.Unique.DFM
                    , CSlash.Types.Unique.DSet
                    , CSlash.Types.Unique.FM
                    , CSlash.Types.Unique.Map
                    , CSlash.Types.Unique.Set
                    , CSlash.Types.Unique.Supply
                    , CSlash.Types.Var
                    , CSlash.Types.Var.Env
                    , CSlash.Types.Var.Set
                    
                    , CSlash.Unicode

                    , CSlash.Unit
                    , CSlash.Unit.Database
                    , CSlash.Unit.Env
                    , CSlash.Unit.External
                    , CSlash.Unit.Finder
                    , CSlash.Unit.Finder.Types
                    , CSlash.Unit.Home
                    , CSlash.Unit.Home.ModInfo
                    , CSlash.Unit.Info
                    , CSlash.Unit.Module
                    , CSlash.Unit.Module.Deps
                    , CSlash.Unit.Module.Env
                    , CSlash.Unit.Module.Graph
                    , CSlash.Unit.Module.Imported
                    , CSlash.Unit.Module.Location
                    , CSlash.Unit.Module.ModDetails
                    , CSlash.Unit.Module.ModGuts
                    , CSlash.Unit.Module.ModIface
                    , CSlash.Unit.Module.ModSummary
                    , CSlash.Unit.Module.Status
                    , CSlash.Unit.Module.Warnings
                    , CSlash.Unit.Parser
                    , CSlash.Unit.Ppr
                    , CSlash.Unit.State
                    , CSlash.Unit.Types

                    , CSlash.UniqueSubdir

                    , CSlash.Utils.Binary
                    , CSlash.Utils.BufHandle
                    , CSlash.Utils.CliOption
                    , CSlash.Utils.Constants
                    , CSlash.Utils.Encoding
                    , CSlash.Utils.Error
                    , CSlash.Utils.Exception
                    , CSlash.Utils.Fingerprint
                    , CSlash.Utils.GlobalVars
                    , CSlash.Utils.Lexeme
                    , CSlash.Utils.Logger
                    , CSlash.Utils.Misc
                    , CSlash.Utils.Monad
                    , CSlash.Utils.Outputable
                    , CSlash.Utils.Panic
                    , CSlash.Utils.Panic.Plain
                    , CSlash.Utils.Ppr
                    , CSlash.Utils.Ppr.Color
                    , CSlash.Utils.TmpFs
                    , CSlash.Utils.Word64

                    , CSlash.Version

    build-depends:    base >= 4.20
                    , ghc ^>= 9.10.1
                    , ghc-boot ^>= 9.10.1
                    , array
                    , filepath
                    , directory
                    , containers
                    , time
                    , deepseq
                    , bytestring
                    , exceptions
                    , transformers
                    , binary
                    , stm
                    , unix
                    , process

    build-tool-depends:   alex:alex 
                        , happy:happy

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wno-name-shadowing
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -- -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2
