cabal-version:      2.4
name:               CSlash
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE
author:             Will
maintainer:         wveatchw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.org

executable csl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base >= 4.20
                    , CSlash
                    , filepath
                    , containers
                    , transformers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2

library
    exposed-modules:  CSlash

                    , CSlash.BaseDir

                    , CSlash.Builtin.Names
                    , CSlash.Builtin.Types
                    , CSlash.Builtin.Types.Prim
                    , CSlash.Builtin.Uniques
                    , CSlash.Builtin.Utils

                    , CSlash.ByteOrder

                    , CSlash.Conc

                    , CSlash.Core
                    , CSlash.Core.ConLike
                    , CSlash.Core.DataCon
                    , CSlash.Core.Kind
                    , CSlash.Core.Kind.Compare
                    , CSlash.Core.Kind.FVs
                    , CSlash.Core.Kind.Subst
                    , CSlash.Core.Map.Kind
                    , CSlash.Core.Opt.CallerCC
                    , CSlash.Core.Opt.CallerCC.Types
                    , CSlash.Core.Ppr
                    , CSlash.Core.Predicate
                    , CSlash.Core.Reduction
                    , CSlash.Core.TyCon
                    , CSlash.Core.TyCon.Set
                    , CSlash.Core.Type
                    , CSlash.Core.Type.FVs
                    , CSlash.Core.Type.Ppr
                    , CSlash.Core.Type.Rep
                    , CSlash.Core.Type.Subst
                    , CSlash.Core.Type.Tidy
                    , CSlash.Core.Unfold
                    , CSlash.Core.Unify
                    , CSlash.Core.UsageEnv

                    , CSlash.Cs
                    , CSlash.Cs.Binds
                    , CSlash.Cs.Decls
                    , CSlash.Cs.Doc
                    , CSlash.Cs.Dump
                    , CSlash.Cs.Expr
                    , CSlash.Cs.Extension
                    , CSlash.Cs.ImpExp
                    , CSlash.Cs.Instances
                    , CSlash.Cs.Kind
                    , CSlash.Cs.Lit
                    , CSlash.Cs.Pat
                    , CSlash.Cs.Stats
                    , CSlash.Cs.Type
                    , CSlash.Cs.Utils

                    , CSlash.Data.Bag
                    , CSlash.Data.Bool
                    , CSlash.Data.EnumSet
                    , CSlash.Data.FastMutInt
                    , CSlash.Data.FastString
                    , CSlash.Data.FastString.Env
                    , CSlash.Data.FiniteMap
                    , CSlash.Data.Graph.Directed
                    , CSlash.Data.IOEnv
                    , CSlash.Data.List.Infinite
                    , CSlash.Data.List.SetOps
                    , CSlash.Data.Maybe
                    , CSlash.Data.OrdList
                    , CSlash.Data.Pair
                    , CSlash.Data.Strict
                    , CSlash.Data.StringBuffer
                    , CSlash.Data.TrieMap
                    , CSlash.Data.Word64Set

                    , CSlash.Driver.Backend
                    , CSlash.Driver.Backend.Internal
                    , CSlash.Driver.CmdLine
                    , CSlash.Driver.Config.Diagnostic
                    , CSlash.Driver.Config.Finder
                    , CSlash.Driver.Config.Logger
                    , CSlash.Driver.Config.Parser
                    , CSlash.Driver.DynFlags
                    , CSlash.Driver.Env
                    , CSlash.Driver.Env.KnotVars
                    , CSlash.Driver.Env.Types
                    , CSlash.Driver.Errors
                    , CSlash.Driver.Errors.Ppr
                    , CSlash.Driver.Errors.Types
                    , CSlash.Driver.Flags
                    , CSlash.Driver.LlvmConfigCache
                    , CSlash.Driver.Main
                    , CSlash.Driver.Make
                    , CSlash.Driver.MakeSem
                    , CSlash.Driver.Monad
                    , CSlash.Driver.Phases
                    , CSlash.Driver.Pipeline
                    , CSlash.Driver.Pipeline.Execute
                    , CSlash.Driver.Pipeline.LogQueue
                    , CSlash.Driver.Pipeline.Monad
                    , CSlash.Driver.Pipeline.Phases
                    , CSlash.Driver.Ppr
                    , CSlash.Driver.Session

                    , CSlash.HandleEncoding
                    
                    , CSlash.Iface.Binary
                    , CSlash.Iface.Env
                    , CSlash.Iface.Errors
                    , CSlash.Iface.Errors.Ppr
                    , CSlash.Iface.Errors.Types
                    , CSlash.Iface.Load
                    , CSlash.Iface.Make
                    , CSlash.Iface.Recomp
                    , CSlash.Iface.Recomp.Binary
                    , CSlash.Iface.Recomp.Flags
                    , CSlash.Iface.Syntax
                    , CSlash.Iface.Type

                    , CSlash.IfaceToCore

                    , CSlash.Language.Syntax
                    , CSlash.Language.Syntax.Basic
                    , CSlash.Language.Syntax.Binds
                    , CSlash.Language.Syntax.Decls
                    , CSlash.Language.Syntax.Expr
                    , CSlash.Language.Syntax.Extension
                    , CSlash.Language.Syntax.ImpExp
                    , CSlash.Language.Syntax.Kind
                    , CSlash.Language.Syntax.Lit
                    , CSlash.Language.Syntax.Module.Name
                    , CSlash.Language.Syntax.Pat
                    , CSlash.Language.Syntax.Type

                    , CSlash.Linker.Dynamic
                    , CSlash.Linker.ExtraObj
                    , CSlash.Linker.Static
                    , CSlash.Linker.Static.Utils
                    , CSlash.Linker.Types
                    , CSlash.Linker.Unit

                    , CSlash.Llvm.Config

                    , CSlash.Parser
                    , CSlash.Parser.Annotation
                    , CSlash.Parser.CharClass
                    , CSlash.Parser.Errors.Basic
                    , CSlash.Parser.Errors.Ppr
                    , CSlash.Parser.Errors.Types
                    , CSlash.Parser.Header
                    , CSlash.Parser.Lexer
                    , CSlash.Parser.PostProcess
                    , CSlash.Parser.Types

                    , CSlash.Platform
                    , CSlash.Platform.ArchOS
                    , CSlash.Platform.Constants
                    , CSlash.Platform.Profile
                    , CSlash.Platform.Ways

                    , CSlash.Rename.Bind
                    , CSlash.Rename.CsKind
                    , CSlash.Rename.CsType
                    , CSlash.Rename.Env
                    , CSlash.Rename.Expr
                    , CSlash.Rename.Fixity
                    , CSlash.Rename.Module
                    , CSlash.Rename.Names
                    , CSlash.Rename.Pat
                    , CSlash.Rename.Unbound
                    , CSlash.Rename.Utils

                    , CSlash.Settings
                    , CSlash.Settings.Config
                    , CSlash.Settings.Constants
                    , CSlash.Settings.IO
                    , CSlash.Settings.Utils

                    , CSlash.Show

                    , CSlash.Stack

                    , CSlash.SysTools
                    , CSlash.SysTools.BaseDir
                    , CSlash.SysTools.Process
                    , CSlash.SysTools.Tasks
                    , CSlash.SysTools.Terminal

                    , CSlash.Tc.CsType
                    , CSlash.Tc.CsType.Utils
                    , CSlash.Tc.Errors
                    , CSlash.Tc.Errors.Hole
                    , CSlash.Tc.Errors.Ppr
                    , CSlash.Tc.Errors.Types
                    , CSlash.Tc.Gen.App
                    , CSlash.Tc.Gen.Bind
                    , CSlash.Tc.Gen.CsType
                    , CSlash.Tc.Gen.CsKind
                    , CSlash.Tc.Gen.Expr
                    , CSlash.Tc.Gen.Head
                    , CSlash.Tc.Gen.Match
                    , CSlash.Tc.Gen.Pat
                    , CSlash.Tc.Gen.Sig
                    , CSlash.Tc.Instance.Relation
                    , CSlash.Tc.Module
                    , CSlash.Tc.Solver
                    , CSlash.Tc.Solver.Equality
                    , CSlash.Tc.Solver.InertSet
                    , CSlash.Tc.Solver.Irred
                    , CSlash.Tc.Solver.Monad
                    , CSlash.Tc.Solver.Relation
                    , CSlash.Tc.Solver.Rewrite
                    , CSlash.Tc.Solver.Solve
                    , CSlash.Tc.Solver.Types
                    , CSlash.Tc.Types
                    , CSlash.Tc.Types.BasicTypes
                    , CSlash.Tc.Types.Constraint
                    , CSlash.Tc.Types.CtLocEnv
                    , CSlash.Tc.Types.Evidence
                    , CSlash.Tc.Types.ErrCtxt
                    , CSlash.Tc.Types.LclEnv
                    , CSlash.Tc.Types.Origin
                    , CSlash.Tc.Types.TcRef
                    , CSlash.Tc.Utils.Env
                    , CSlash.Tc.Utils.Instantiate
                    , CSlash.Tc.Utils.Monad
                    , CSlash.Tc.Utils.TcMType
                    , CSlash.Tc.Utils.TcType
                    , CSlash.Tc.Utils.Unify
                    , CSlash.Tc.Validity
                    , CSlash.Tc.Zonk.Env
                    , CSlash.Tc.Zonk.Monad
                    , CSlash.Tc.Zonk.TcType
                    , CSlash.Tc.Zonk.Type

                    , CSlash.Types
                    , CSlash.Types.Avail
                    , CSlash.Types.Basic
                    , CSlash.Types.CompleteMatch
                    , CSlash.Types.Demand
                    , CSlash.Types.Error
                    , CSlash.Types.Error.Codes
                    , CSlash.Types.Fixity
                    , CSlash.Types.Fixity.Env
                    , CSlash.Types.GREInfo
                    , CSlash.Types.Hint
                    , CSlash.Types.Hint.Ppr
                    , CSlash.Types.Id
                    , CSlash.Types.Id.Make
                    , CSlash.Types.Id.Info
                    , CSlash.Types.Literal
                    , CSlash.Types.Name
                    , CSlash.Types.Name.Cache
                    , CSlash.Types.Name.Env
                    , CSlash.Types.Name.Occurrence
                    , CSlash.Types.Name.Ppr
                    , CSlash.Types.Name.Reader
                    , CSlash.Types.Name.Set
                    , CSlash.Types.PcInfo
                    , CSlash.Types.PkgQual
                    , CSlash.Types.ProfAuto
                    , CSlash.Types.RepType
                    , CSlash.Types.SourceError
                    , CSlash.Types.SourceFile
                    , CSlash.Types.SourceText
                    , CSlash.Types.SrcLoc
                    , CSlash.Types.Target
                    , CSlash.Types.Tickish
                    , CSlash.Types.TypeEnv
                    , CSlash.Types.TyThing
                    , CSlash.Types.Unique
                    , CSlash.Types.Unique.DFM
                    , CSlash.Types.Unique.DSet
                    , CSlash.Types.Unique.FM
                    , CSlash.Types.Unique.Map
                    , CSlash.Types.Unique.Set
                    , CSlash.Types.Unique.Supply
                    , CSlash.Types.Var
                    , CSlash.Types.Var.Env
                    , CSlash.Types.Var.Set
                    
                    , CSlash.Unicode

                    , CSlash.Unit
                    , CSlash.Unit.Database
                    , CSlash.Unit.Env
                    , CSlash.Unit.External
                    , CSlash.Unit.Finder
                    , CSlash.Unit.Finder.Types
                    , CSlash.Unit.Home
                    , CSlash.Unit.Home.ModInfo
                    , CSlash.Unit.Info
                    , CSlash.Unit.Module
                    , CSlash.Unit.Module.Deps
                    , CSlash.Unit.Module.Env
                    , CSlash.Unit.Module.Graph
                    , CSlash.Unit.Module.Imported
                    , CSlash.Unit.Module.Location
                    , CSlash.Unit.Module.ModDetails
                    , CSlash.Unit.Module.ModGuts
                    , CSlash.Unit.Module.ModIface
                    , CSlash.Unit.Module.ModSummary
                    , CSlash.Unit.Module.Status
                    , CSlash.Unit.Module.Warnings
                    , CSlash.Unit.Parser
                    , CSlash.Unit.Ppr
                    , CSlash.Unit.State
                    , CSlash.Unit.Types

                    , CSlash.UniqueSubdir

                    , CSlash.Utils.Binary
                    , CSlash.Utils.BufHandle
                    , CSlash.Utils.CliOption
                    , CSlash.Utils.Constants
                    , CSlash.Utils.Encoding
                    , CSlash.Utils.Error
                    , CSlash.Utils.Exception
                    , CSlash.Utils.Fingerprint
                    , CSlash.Utils.FV
                    , CSlash.Utils.GlobalVars
                    , CSlash.Utils.Lexeme
                    , CSlash.Utils.Logger
                    , CSlash.Utils.Misc
                    , CSlash.Utils.Monad
                    , CSlash.Utils.Monad.Codensity
                    , CSlash.Utils.Outputable
                    , CSlash.Utils.Panic
                    , CSlash.Utils.Panic.Plain
                    , CSlash.Utils.Ppr
                    , CSlash.Utils.Ppr.Color
                    , CSlash.Utils.TmpFs
                    , CSlash.Utils.Trace
                    , CSlash.Utils.Word64

                    , CSlash.Version

    build-depends:    base >= 4.20
                    , ghc ^>= 9.10.1
                    , ghc-boot ^>= 9.10.1
                    , array
                    , filepath
                    , directory
                    , containers
                    , time
                    , deepseq
                    , bytestring
                    , exceptions
                    , transformers
                    , binary
                    , stm
                    , unix
                    , process

    build-tool-depends:   alex:alex 
                        , happy:happy

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W
                      -Wall
                      -Wno-name-shadowing
                      -Werror=incomplete-patterns
                      -Werror=incomplete-uni-patterns
                      -Werror=missing-fields
                      -- -Werror=missing-methods
                      -Wincomplete-record-updates
                      -- -Wpartial-fields
                      -Werror=missing-home-modules
                      -Widentities
                      -Wredundant-constraints
                      -O2
